# slobs-virtual-cam-installer

./: .gitignore  CMakeLists.txt  CMakePresets.json  Info.plist  README.md  build.sh  checkVirtualCamGUID.js  codesign_development.sh  codesign_distribute.sh  copyVirtualCamGUID.js  entitlements.plist  install-mac-camera-ext.sh
.github/actions/setup-macos-codesigning/: action.yaml
.github/workflows/: main.yml
src/: main.swift
